# wg-gesucht-stats

./: README.md  _quarto.yaml  pyproject.toml
data/: flat_ads.csv  proxy_list.txt  stop_words.txt
docs/: index.html  search.json
docs/notebooks/: flat_ad_details.html  flat_ads.html  index.html  proxy_check.html
notebooks/: flat_ad_details.ipynb  flat_ads.ipynb  index.ipynb  proxy_check.ipynb
wggesuchtstats/: config.py  models.py  parsers.py  scraper.py  util.py
