[tool.poetry]
name = "wggesuchtstats"
version = "0.1"
description = ""
authors = ["Yannik Queisler <dev.yannik.queisler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
beautifulsoup4 = "^4.12"
requests = {extras = ["socks"], version = "^2.32.4"}
backoff = "^2.2.1"
python-dotenv = "^1.1.1"
pandas = "^2.3.1"
matplotlib = "^3.10.5"
geopandas = "^1.1.1"
shapely = "^2.1.1"
fiona = "^1.10.1"
pyproj = "^3.7.2"
tqdm = "^4.67.1"
drissionpage = "^4.1.1.2"
pydub = "^0.25.1"
speechrecognition = "^3.14.3"
seaborn = "^0.13.2"
scikit-learn = "^1.7.1"
spacy = "^3.8.7"
numba = "^0.61.2"
umap-learn = "^0.5.9.post2"
hdbscan = "^0.8.40"
sentence-transformers = "^5.1.0"
germansentiment = "^1.1.0"
tiktoken = "^0.11.0"
protobuf = "^6.32.0"
tokenizers = "^0.21.4"
sentencepiece = "^0.2.1"
transformers = "^4.55.2"
wordcloud = "^1.9.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
